# drf-auth-setup

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt  ruff.toml
drfauth/: asgi.py  env.py  urls.py  wsgi.py
drfauth/settings/: base.py  local.py
loggings/: __init__.py  base.py  local.py
users/: adapter.py  admin.py  apps.py  forms.py  models.py  serializers.py
users/signals/: receivers.py
utilities/: generate_custom_id.py
